--- a/templates/datarobot-appnode-template.yaml
+++ b/templates/datarobot-appnode-template.yaml
@@ -5,7 +5,6 @@
 #  OR CONDITIONS OF ANY KIND, express or implied.                         #
 ###########################################################################
 
-
 AWSTemplateFormatVersion: "2010-09-09"
 Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-1xxxxxxxx)
 Metadata:
@@ -13,12 +12,12 @@ Metadata:
     EntrypointName: Launch into an existing VPC
     Order: "5"
   QSLint:
-    Exclusions: [ W9002, W9003, W9006 ]
+    Exclusions: [ W9002, W9003 ]
   cfn-lint:
     config:
       ignore_checks:
-        - E9101
-
+        - W1020
+        - E0002
 
 Parameters:
   EC2InstanceSecurityProfile:
@@ -53,7 +52,7 @@ Parameters:
   InstanceType:
     Type: String
     Description: AWS Instance Type
-    AllowedValues: [ "t3.2xlarge", "m5.xlarge", "m5.2xlarge", "c5.xlarge", "c5.2xlarge", "r5.xlarge", "r5.2xlarge", "r5.4xlarge", "r5d.12xlarge" ]
+    AllowedValues: [ "t3.2xlarge", "m5.xlarge", "m5.2xlarge", "c5.xlarge", "c5.2xlarge", "r5.xlarge", "r5.2xlarge", "r5.4xlarge", "r5d.12xlarge", "r5.large" ]
     Default: r5.2xlarge
   NodeVolumeSize:
     Type: Number
@@ -63,8 +62,8 @@ Parameters:
   DataVolumeSize:
     Type: Number
     Description: Hard drive size for the DataRobot software
-    AllowedValues: [ 128, 256, 512, 1024, 2048, 4096 ]
-    Default: 256
+    AllowedValues: [ 128, 200, 256, 512, 1024, 2048, 4096 ]
+    Default: 200
   Region:
     Type: String
     Description: Region to host cluster
@@ -131,11 +130,6 @@ Parameters:
     Description: How to save the data in this cluster. If using AutoScaling, you must not use minio.
     AllowedValues: [ "minio", "s3bucket", "gluster" ]
     Default: s3bucket
-  UseDPELoadBalancer:
-    Type: String
-    Description: Enable 3 DPE's for AWS App Load Blancing
-    Default: false
-    AllowedValues: [ true, false ]
   MetricNamespace:
     Type: String
     Description: CloudWatch AutoScaling Metric Namespace
@@ -454,7 +448,6 @@ Resources:
                 STORAGE: !Ref StorageDir
                 USE_AUTOSCALING: !Ref UseAutoScaling
                 USE_LOG_SERVER: !If [ "UseLogServer", "true", "false" ]
-                USE_DPELB: !Ref UseDPELoadBalancer
                 METRIC_NAMESPACE: !Ref MetricNamespace
                 PREDICTION_NAME: !Ref PredictionName
 
